# personal-assistant

./: .gitignore  README.md  address_book.py  addressbook.pkl  handlers.py  main.py  pyproject.toml  storage.py
assistant/: main.py
assistant/handlers/: __init__.py  contacts_handlers.py  notes_handlers.py
assistant/models/: __init__.py  contacts.py  note.py  notes.py
assistant/storage/: __init__.py  storage.py
assistant/utils/: __init__.py  console.py  extract_tags.py  input_error.py  parse_input.py
assistant/validators/: __init__.py  validate_args.py  validate_tag.py
