[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "0.1.0"
description = "CLI personal assistant"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "colorama"
]

[project.scripts]
assistant = "assistant.main:main"

[tool.setuptools]
packages = ["assistant"]